--- a/style.css
+++ b/style.css
@@ -22,7 +22,14 @@ button[disabled],
 button[disabled=disabled] {
     border-color: rgb(30, 60, 75);
 }
-
+#message {
+    color: black;
+    background: #fff;
+    box-shadow: 0 0 5px #fff, 0 0 8px #fff, 0 0 12px #fff, 0 0 15px blue, 0 0 25px blue;
+    display: inline-block;
+    border-radius: 10px 10px 10px 10px;
+    padding: 0px 5px 0px 5px;
+}
 #historique img {
     width: 20px;
     height: 20px;
