--- a/style.css
+++ b/style.css
@@ -19,17 +19,23 @@ button {
 
 button:disabled,
 button[disabled],
-button[disabled=disabled] {
+button[disabled="disabled"] {
     border-color: rgb(30, 60, 75);
 }
+
 #message {
     color: black;
     background: #fff;
-    box-shadow: 0 0 5px #fff, 0 0 8px #fff, 0 0 12px #fff, 0 0 15px blue, 0 0 25px blue;
+    box-shadow: 0 0 5px #fff,
+    0 0 8px #fff,
+    0 0 12px #fff,
+    0 0 15px blue,
+    0 0 25px blue;
     display: inline-block;
     border-radius: 10px 10px 10px 10px;
     padding: 0px 5px 0px 5px;
 }
+
 #historique img {
     width: 20px;
     height: 20px;
@@ -40,7 +46,8 @@ button img {
     height: 30px;
 }
 
-#scoreVert, #scoreRouge {
+#scoreVert,
+#scoreRouge {
     width: 40px;
     font-size: 20px;
     text-align: center;
@@ -93,7 +100,11 @@ button img {
     background: #fff;
     height: 14px;
     border-radius: 2px 7px 7px 2px;
-    box-shadow: 0 0 5px #fff, 0 0 8px #fff, 0 0 12px #fff, 0 0 15px blue, 0 0 25px blue;
+    box-shadow: 0 0 5px #fff,
+    0 0 8px #fff,
+    0 0 12px #fff,
+    0 0 15px blue,
+    0 0 25px blue;
     z-index: 5;
     -webkit-transition: all 1s;
     -moz-transition: all 1s;
