--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,15 @@ button[disabled="disabled"] {
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
+#ruleEditor img {
+    width: 20px;
+    height: 20px;
+}
+
+#ruleEditor input {
+    width: 40px;
+}
+
 #historique img {
     width: 20px;
     height: 20px;
