--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@ body {
 
 .dark {
     color: rgb(100, 200, 255);
-    background-color: rgba(30, 30, 30);
+    background-color: rgb(30, 30, 30);
 }
 
 #background-image {
